Added Logout style and function.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,6 +12,7 @@
     --font-color: #202020;
     --btn-light-color: #d8acba;
     --btn-hover: #d9d7c4;
+    --btn-dark-color: #854459;
 }
 
 html, body {
