--- a/static/css/account/login.css
+++ b/static/css/account/login.css
@@ -5,6 +5,11 @@
     width: 50%;
 }
 
+.btn-custom-dark {
+    background-color: var(--btn-light-color);
+    color: var(--font-text);
+}
+
 /* Signup link */
 #signup-link a {
     padding: 0.5rem;
@@ -28,6 +33,11 @@
 #id_password_helptext a:hover,
 #signup-link a:hover, #signup-link a:focus {
     background-color: var(--btn-hover);
+}
+
+.btn-custom-dark:hover, .btn-custom-dark:focus {
+    background-color: var(--btn-dark-color);
+    color: var(--footer-text);
 }
 
 /* Media queries */
