styled contuct page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -26,7 +26,7 @@
     <div class="row mt-4">
       <div class="col-md-12">
         <div class="text-background rounded-5 padding-2 text-start">
-            <h3 class="text-start">Meet uncleTech</h3>
+            <h3 class="text-center">Meet uncleTech</h3>
           <p>
             Meet Uncle Tech — Your Friendly Tech Helper!  
             Struggling with the Wi-Fi? Can't find the settings on your phone?  
