--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -4,33 +4,52 @@
 {% block content %}
 
 <!-- Contact form page -->
-<div class="row g-0 justify-content-center">
-    <div class="col-12 col-md-6 my-5" id="contact-pg">
-        <h2 id="contact-heading">We love to hear from you!</h2>
-        <div id="contact-description">
-            <p>Do you have any suggestions?</p>
-            <p>Would you like to just say hi?</p>
-            <p>Please drop us a line and we will get back to as soon as we can.</p>
+<div class="container-md min-vh-100 d-flex align-items-center py-4">
+    <div class="row justify-content-center w-100">
+        <div class="col-12 col-lg-10">
+            <div class="text-background rounded-5 p-4" id="contact-pg">
+                <h2 id="contact-heading" class="text-center">We love crafting!</h2>
+                <div id="contact-description" class="text-start">
+                    <p>Have you seen anything on this blog that takes your fancy? Maybe you have got inspiration from a website
+                        and need help? Ask us!</p>
+                    <p>One of our members specialises in knitted socks and items, textiles, and small woodworking projects. The
+                        other member specialises in paracord projects, rope both new and upcycled, and chainmail.</p>
+                    <p>Both of us make historically inspired items. We nålbind (needle-binding), a type of yarn work
+                        that predates knitting or crochet. We have been known to hand stitch hats, bags, and pouches, and even
+                        tunics and dresses!</p>
+                </div>
+                <!-- Form to be used for contacting -->
+                <div class="d-flex justify-content-center mt-4">
+                    <form id="contactForm" class="contact-form w-100" style="max-width: 500px;" method="post" action="{% url 'contact' %}">
+                      
+                        {% csrf_token %}
+                      {{ contact_form.non_field_errors }}
+                      <p id="contact-name">
+                        {{ contact_form.name.label_tag }}
+                        <br />
+                        {{ contact_form.name }}
+                      </p>
+                      <p id="contact-email">
+                        {{ contact_form.email.label_tag }}
+                        <br />
+                        {{ contact_form.email }}
+                      </p>
+                      <p id="contact-msg">
+                        {{ contact_form.message.label_tag }}
+                        <br />
+                        {{ contact_form.message }}
+                      </p>
+                      <div class="d-flex justify-content-center">
+                        <button id="contact-submit" class="btn btn-custom rounded-2" type="submit" aria-label="Submit">
+                          Submit
+                        </button>
+                      </div>
+                    </form>
+                  </div>
+            </div>
         </div>
-        <!-- Form to be used for contacting/ordering -->
-        <form id="contactForm" class="contact-form" method="post" action="{% url 'contact' %}">
-            {% csrf_token %}
-            {{ contact_form.non_field_errors }}
-            <p id="contact-name">
-                {{ contact_form.name.label_tag }}
-                {{ contact_form.name }}
-            </p>
-            <p id="contact-email">
-                {{ contact_form.email.label_tag }}
-                {{ contact_form.email }}
-            </p>
-            <p id="contact-msg">
-                {{ contact_form.message.label_tag }}
-                {{ contact_form.message }}
-            </p>
-            <button id="contact-submit" class="btn btn-secondary btn-signup" type="submit" aria-label="Submit">Submit</button>
-        </form>
     </div>
 </div>
+
 
 {% endblock %}
