--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,6 +11,7 @@
     --footer-text: #f5f5f5;
     --font-color: #202020;
     --btn-light-color: #d8acba;
+    --btn-dark-color: #854459;
     --btn-hover: #d9d7c4;
     --btn-dark-color: #854459;
 }
