--- a/team/templates/team/team.html
+++ b/team/templates/team/team.html
@@ -14,10 +14,10 @@
                 <div class="polariod" data-name="Asya Haroyan" data-bio="Don't know what to put here"
                     data-link1="https://github.com/asyaharoyan"
                     data-link2="https://www.linkedin.com/in/asya-haroyan-688b43159/"
-                    data-img="{% static 'images/team/nobody.jpg' %}" data-border-color="#ffd6a5">
+                    data-img="{% static 'images/team/asya.png' %}" data-border-color="#ffd6a5">
                     <div class="card-axis orange">
                         <div>
-                            <img class="mt-1" src="{% static 'images/team/nobody.jpg' %}" alt="Team member: Asya">
+                            <img class="mt-1" src="{% static 'images/team/asya.png' %}" alt="Team member: Asya">
                             <h3 class="title">Asya Haroyan</h3>
                             <i class="fas fa-sync-alt"></i>
                         </div>
@@ -31,10 +31,10 @@
                     data-info="Go take a look at my github and then connect on LinkedIn!"
                     data-link1="https://github.com/brandonlea"
                     data-link2="https://www.linkedin.com/in/brandon-lea-price-249129172/"
-                    data-img="{% static 'images/team/nobody.jpg' %}" data-border-color="#fdffb6">
+                    data-img="{% static 'images/team/brandon.png' %}" data-border-color="#fdffb6">
                     <div class="card-axis yellow">
                         <div>
-                            <img class="mt-1" src="{% static 'images/team/nobody.jpg' %}"
+                            <img class="mt-1" src="{% static 'images/team/brandon.png' %}"
                                 alt="Team member: Brandon-Lea">
                             <h3 class="title">Brandon-Lea Price</h3>
                             <i class="fas fa-sync-alt"></i>
@@ -49,10 +49,10 @@
                     data-info="Go take a look at my github and then connect on LinkedIn!" 
                     data-link1="https://github.com/Ebuka-martins"
                     data-link2="http://www.linkedin.com/in/ebuka-martins-echesi-msc-b-tech-software-development-a724a86a"
-                    data-img="{% static 'images/team/nobody.jpg' %}" data-border-color="#caffbf">
+                    data-img="{% static 'images/team/ebuka.png' %}" data-border-color="#caffbf">
                     <div class="card-axis green">
                         <div>
-                            <img class="mt-1" src="{% static 'images/team/nobody.jpg' %}" alt="Team member: Ebuka">
+                            <img class="mt-1" src="{% static 'images/team/ebuka.png' %}" alt="Team member: Ebuka">
                             <h3 class="title">Ebuka Martins </h3>
                             <i class="fas fa-sync-alt"></i>
                         </div>
@@ -66,10 +66,10 @@
                     data-info="Go take a look at my github and then connect on LinkedIn!"
                     data-link1="https://github.com/Ljkkj7"
                     data-link2="https://www.linkedin.com/in/kian-jenkins-421425202/"
-                    data-img="{% static 'images/team/nobody.jpg' %}" data-border-color="#9bf6ff">
+                    data-img="{% static 'images/team/kian.png' %}" data-border-color="#9bf6ff">
                     <div class="card-axis blue">
                         <div>
-                            <img class="mt-1" src="{% static 'images/team/nobody.jpg' %}" alt="Team member: Kian">
+                            <img class="mt-1" src="{% static 'images/team/kian.png' %}" alt="Team member: Kian">
                             <h3 class="title">Kian Jenkins</h3>
                             <i class="fas fa-sync-alt"></i>
                         </div>
@@ -83,10 +83,10 @@
                     data-bio="Swedish based, Kiwi coder, I do my best to support the team so we can make the best product we can."
                     data-info="Go take a look at my github and then connect on LinkedIn!"
                     data-link1="https://github.com/Swewi" data-link2="https://www.linkedin.com/in/kireebellamy/"
-                    data-img="{% static 'images/team/kiree.jpg' %}" data-border-color="#bdb2ff">
+                    data-img="{% static 'images/team/kiree.png' %}" data-border-color="#bdb2ff">
                     <div class="card-axis indigo">
                         <div>
-                            <img class="mt-1" src="{% static 'images/team/nobody.jpg' %}" alt="Team member: Kiree">
+                            <img class="mt-1" src="{% static 'images/team/kiree.png' %}" alt="Team member: Kiree">
                             <h3 class="title">Kiree Bellamy</h3>
                             <i class="fas fa-sync-alt"></i>
                         </div>
@@ -100,10 +100,10 @@
                     data-info="Go take a look at my github and then connect on LinkedIn!"
                     data-link1="https://github.com/dimitri-edel"
                     data-link2="https://www.linkedin.com/in/dimitri-edel-26a5022a9/"
-                    data-img="{% static 'images/team/nobody.jpg' %}" data-border-color="#ffc6ff">
+                    data-img="{% static 'images/team/dimitri.png' %}" data-border-color="#ffc6ff">
                     <div class="card-axis violet">
                         <div>
-                            <img class="mt-1" src="{% static 'images/team/nobody.jpg' %}"
+                            <img class="mt-1" src="{% static 'images/team/dimitri.png' %}"
                                 alt="Team member: Dimitri">
                             <h3 class="title">Dimitri Edel</h3>
                             <i class="fas fa-sync-alt"></i>
@@ -116,7 +116,7 @@
     
     <!-- Centered logo -->
     <div class="light">
-        <img src="{% static 'images/team-logo.png' %}" alt="team logo" class="rounded-circle">
+        <img src="{% static 'images/team-logo.png' %}" alt="team logo" class="rounded-circle team-logo">
     </div>
 </div>
 <div class="details-section data-border" id="details-section">
