--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -1,4 +1,7 @@
-{% extends "account/base_entrance.html" %}
+{% extends "base.html" %}
+
+{% load static %}
+
 {% load i18n allauth account %}
 {% block head_title %}
     {% trans "Password Reset" %}
