contact form phrasing

--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -8,15 +8,11 @@
     <div class="row justify-content-center w-100">
         <div class="col-12 col-lg-10">
             <div class="text-background rounded-5 p-4" id="contact-pg">
-                <h2 id="contact-heading" class="text-center">We love crafting!</h2>
-                <div id="contact-description" class="text-start">
-                    <p>Have you seen anything on this blog that takes your fancy? Maybe you have got inspiration from a website
-                        and need help? Ask us!</p>
-                    <p>One of our members specialises in knitted socks and items, textiles, and small woodworking projects. The
-                        other member specialises in paracord projects, rope both new and upcycled, and chainmail.</p>
-                    <p>Both of us make historically inspired items. We nålbind (needle-binding), a type of yarn work
-                        that predates knitting or crochet. We have been known to hand stitch hats, bags, and pouches, and even
-                        tunics and dresses!</p>
+                <h2 id="contact-heading" class="text-center">We love mail!!</h2>
+                <div id="contact-description" class="text-center">
+                    <p>Would you like to send us a suggestion or comment?</p>
+                    <p>Or maybe offer a little feedback on our awesome bot?</p>
+                    <p>Drop us a line we really do read every message and will get back to you as soon as we can!</p>
                 </div>
                 <!-- Form to be used for contacting -->
                 <div class="d-flex justify-content-center mt-4">
