--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -4,10 +4,10 @@
 {% block content %}
 
 <!-- Contact form page -->
-<div class="container-md min-vh-100 d-flex align-items-center py-4">
-    <div class="row justify-content-center w-100">
-        <div class="col-12 col-lg-10">
-            <div class="text-background rounded-5 p-4" id="contact-pg">
+<div class="container-md py-4">
+  <div class="row mt-4">
+    <div class="col-md-12">
+            <div class="text-background rounded-5 padding-2 text-start" id="contact-pg">
                 <h2 id="contact-heading" class="text-center">We love mail!!</h2>
                 <div id="contact-description" class="text-center">
                     <p>Would you like to send us a suggestion or comment?</p>
@@ -16,8 +16,7 @@
                 </div>
                 <!-- Form to be used for contacting -->
                 <div class="d-flex justify-content-center mt-4">
-                    <form id="contactForm" class="contact-form w-100" style="max-width: 500px;" method="post" action="{% url 'contact' %}">
-                      
+                    <form id="contactForm" class="contact-form w-50" method="post" action="{% url 'contact' %}">
                         {% csrf_token %}
                       {{ contact_form.non_field_errors }}
                       <p id="contact-name">
