--- a/team/templates/team/team.html
+++ b/team/templates/team/team.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 <section class="container-fluid about-banner text-center mt-5">
-    <h1>Meet The Digital Relatives!</h1>
+    <h1>Meet the team members from</h1>
 </section>
 <div class="banner">
     <div class="slider" style="--quantity: 6"> <!-- Adjust the number of items here -->
@@ -116,7 +116,7 @@
     
     <!-- Centered logo -->
     <div class="light">
-        <img src="{% static 'images/team-logo.png' %}" alt="team logo" class="rounded-circle team-logo">
+        <img src="{% static 'images/team-logo.png' %}" alt="team logo" class="rounded-circle team-logo mt-3">
     </div>
 </div>
 <div class="details-section data-border" id="details-section">
