--- a/notes/templates/notes/notes.html
+++ b/notes/templates/notes/notes.html
@@ -6,8 +6,8 @@
         <div class="modal-content p-4 text-center">
             <p>Do you really want to delete the note?</p>
             <div class="mt-4">
-                <button id="modalYesBtn" class="btn btn-danger me-3">Yes</button>
-                <button id="modalNoBtn" class="btn btn-secondary">No</button>
+                <button id="modalYesBtn" class="btn btn-filter me-3">Yes</button>
+                <button id="modalNoBtn" class="btn btn-custom-dark">No</button>
             </div>
         </div>
     </div>
@@ -27,7 +27,7 @@
 
                 <div class="row justify-content-center mt-4 gap-4">
                     {% for note in notes %}
-                    <div class="note-tile col-3">
+                    <div class="note-tile col-12 col-sm-6 col-md-4 col-lg-3">
                         <div class="delete-icon">
                             <i class="fas fa-trash"></i>
                             <span class="delete-note-id d-none">{{ note.id }}</span>
