--- a/static/css/note.css
+++ b/static/css/note.css
@@ -144,7 +144,6 @@ justify-content: center;
 width: 150px;
 height: 150px;
 background: var(--btn-light-color);
-background: #ffffff;
 border-radius: 8px;
 display: block;
 text-align: center;
@@ -158,7 +157,7 @@ padding: 10px;
 
 .note-tile:hover {
 box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-background: #e0e7ff;
+background: var(--btn-hover);
 }
 
 /* Delete icon */
@@ -204,5 +203,11 @@ margin-bottom: 1rem;
 /* Custom button */
 .btn-filter {
     background-color: var(--btn-light-color);
+    color: var(--font-color);
+}
+
+/* Hover and Focus Effect */
+.btn-filter:hover, .btn-filter:focus {
+    background-color: var(--btn-hover);
     color: var(--font-color);
 }
