update to team deatails

--- a/team/templates/team/team.html
+++ b/team/templates/team/team.html
@@ -27,7 +27,7 @@
         </div>
         <div class="item" style="--position: 5">
             <div class="spacing">
-                <div class="polariod" data-name="Brandon-Lea Price" data-bio="Don't know what to put here."
+                <div class="polariod" data-name="Brandon-Lea Price" data-bio="UK based Full Stack developer, always looking for a challenge and learning new skills everyday.."
                     data-info="Go take a look at my github and then connect on LinkedIn!"
                     data-link1="https://github.com/brandonlea"
                     data-link2="https://www.linkedin.com/in/brandon-lea-price-249129172/"
