updating team comments

--- a/team/templates/team/team.html
+++ b/team/templates/team/team.html
@@ -62,7 +62,7 @@
         </div>
         <div class="item" style="--position: 3">
             <div class="spacing">
-                <div class="polariod" data-name="Kian Jenkins" data-bio="Don't know what to put here."
+                <div class="polariod" data-name="Kian Jenkins" data-bio="Interesting facts."
                     data-info="Go take a look at my github and then connect on LinkedIn!"
                     data-link1="https://github.com/Ljkkj7"
                     data-link2="https://www.linkedin.com/in/kian-jenkins-421425202/"
@@ -80,7 +80,7 @@
         <div class="item" style="--position: 2">
             <div class="spacing">
                 <div class="polariod" data-name="Kiree Bellamy"
-                    data-bio="Swedish based, Kiwi coder, I do my best to support the team so we can make the best product we can."
+                    data-bio="Swedish based, Kiwi coder, This months Scrum master, do my best to support the team so we can make the best product we can."
                     data-info="Go take a look at my github and then connect on LinkedIn!"
                     data-link1="https://github.com/Swewi" data-link2="https://www.linkedin.com/in/kireebellamy/"
                     data-img="{% static 'images/team/kiree.png' %}" data-border-color="#bdb2ff">
@@ -96,7 +96,7 @@
         </div>
         <div class="item" style="--position: 1">
             <div class="spacing">
-                <div class="polariod" data-name="Dimitri Edel" data-bio="Not sure what to put here."
+                <div class="polariod" data-name="Dimitri Edel" data-bio="German based backend engineer extraordinaire."
                     data-info="Go take a look at my github and then connect on LinkedIn!"
                     data-link1="https://github.com/dimitri-edel"
                     data-link2="https://www.linkedin.com/in/dimitri-edel-26a5022a9/"
