update team html

--- a/team/templates/team/team.html
+++ b/team/templates/team/team.html
@@ -11,7 +11,7 @@
     <div class="slider" style="--quantity: 6"> <!-- Adjust the number of items here -->
         <div class="item" style="--position: 6">
             <div class="spacing">
-                <div class="polariod" data-name="Asya Haroyan" data-bio="Don't know what to put here"
+                <div class="polariod" data-name="Asya Haroyan" data-bio="Swedish based UX/UI designer of great skill"
                     data-link1="https://github.com/asyaharoyan"
                     data-link2="https://www.linkedin.com/in/asya-haroyan-688b43159/"
                     data-img="{% static 'images/team/asya.png' %}" data-border-color="#ffd6a5">
@@ -45,7 +45,7 @@
         </div>
         <div class="item" style="--position: 4">
             <div class="spacing">
-                <div class="polariod" data-name="Ebuka Martins" data-bio="Not sure what to put here." 
+                <div class="polariod" data-name="Ebuka Martins" data-bio="Irish Based Full Stack Developer and Predictive Analyst." 
                     data-info="Go take a look at my github and then connect on LinkedIn!" 
                     data-link1="https://github.com/Ebuka-martins"
                     data-link2="http://www.linkedin.com/in/ebuka-martins-echesi-msc-b-tech-software-development-a724a86a"
