--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -7,31 +7,36 @@
     {% trans "Password Reset" %}
 {% endblock head_title %}
 {% block content %}
-<h2
-    {% element h1 %}
-        {% trans "Password Reset" %}
-    {% endelement %}
-    {% if user.is_authenticated %}
-        {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
-    {% element p %}
-        {% trans "Forgotten your password? Enter your email address below, and we'll send you an email allowing you to reset it." %}
-    {% endelement %}
-    {% url 'account_reset_password' as reset_url %}
-    {% element form form=form method="post" action=reset_url %}
-        {% slot body %}
-            {% csrf_token %}
-            {% element fields form=form %}
-            {% endelement %}
-            {{ redirect_field }}
-        {% endslot %}
-        {% slot actions %}
-            {% element button type="submit" %}
-                {% trans 'Reset My Password' %}
-            {% endelement %}
-        {% endslot %}
-    {% endelement %}
-    {% element p %}
-        {% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}
-    {% endelement %}
+
+<div class="container-md d-flex align-items-center h-100">
+    <div class="text-background py-4 rounded-5 mx-auto w-80">
+        <div class="row align-items-center justify-content-center">
+            <div class="col-md-12 col-sm-6">
+                <h1 class="text-center">{% trans "Password Reset" %}</h1>
+                
+                <p class="text-center">
+                    {% trans "Forgotten your password? Enter your email address below, and we'll send you an email allowing you to reset it." %}
+                </p>
+            </div>
+            <div class="col-md-12 col-sm-6 d-flex justify-content-center py-2">
+                {% if user.is_authenticated %}
+                    {% include "account/snippets/already_logged_in.html" %}
+                {% endif %}
+                
+                {% url 'account_reset_password' as reset_url %}
+                <form class="password-reset id="password-reset-form" method="POST" action="{{ reset_url }}">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    {{ redirect_field }}
+                    <button class="btn btn-custom rounded-2" type="submit">{% trans 'Reset My Password' %}</button>
+                </form>
+            </div>
+            <div class="col-md-12 col-sm-6 text-center">
+                <p>
+                    {% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock content %}
