--- a/assistant/templates/assistant/assistant.html
+++ b/assistant/templates/assistant/assistant.html
@@ -50,12 +50,12 @@
                       </button>
                     </div>
                     <div class="col-4 col-md-auto p-0">
-                      <button id="save_conversation" class="btn w-100 btn-outline-secondary">
+                      <button id="save_conversation" class="btn w-100">
                         <i class="fas fa-save"></i>
                       </button>
                     </div>
                     <div class="col-4 col-md-auto p-0">
-                      <button id="clear_chat" class="btn w-100 btn-outline-danger">
+                      <button id="clear_chat" class="btn w-100">
                         <i class="fas fa-redo"></i>
                       </button>
                     </div>
@@ -77,7 +77,7 @@
                   </div>
                   <div class="modal-footer border-0">
                     <button type="button" class="btn btn-secondary" id="cancelButton" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary" id="okButton">OK</button>
+                    <button type="button" class="btn btn-confirm" id="okButton">OK</button>
                   </div>
                 </div>
               </div>
